--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.7",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "framer-motion": "^6.2.8",
+    "axios": "^0.26.1",
     "next": "12.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
+    "@types/styled-components": "^5.1.24",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2"
   }
