--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "framer-motion": "^6.2.8",
     "next": "12.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.29.0",
+    "react-icons": "^4.3.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3"
   },
