--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
     "next": "12.1.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "nookies": "^2.5.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.5",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/styled-components": "^5.1.24",
+    "@types/yup": "^0.29.13",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2"
   }
