--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
+    "react-loading-skeleton": "^3.0.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "yup": "^0.32.11"
