--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "lint-fix-all": "eslint --fix --ext .ts,.tsx ."
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
@@ -24,11 +26,22 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.4",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/styled-components": "^5.1.24",
     "@types/yup": "^0.29.13",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.2"
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "7.32.0",
+    "eslint-config-next": "^12.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import-helpers": "^1.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.6.0",
+    "typescript": "4.5.2"
   }
 }
